# Seminar-Eye-Surgery-Robot

./: Forward_Kinematics.cpp  Forward_Kinematics.h  Header1.h  Jacobian_Pseudoinverse.cpp  Jacobian_Pseudoinverse.h  Project2.vcxproj  README.md  extApi.c  shape_drawing_cpp.ttt
FK_ShapeDrawing/: CommentsSeminar.asv  CommentsSeminar.m  FK_test_shapedrawing.ttt  Jacobian_pseudoinverse.m  api_connect.m  forward_kinematics.m  get_joint_positions.m  set_joint_positions.m
buildFolder/: CMakeCache.txt  Makefile  cmake_install.cmake
cppCode/: CMakeLists.txt
cppCode/include/: Forward_Kinematics.h  Jacobian_Pseudoinverse.h
cppCode/src/: .connect.cpp.swp  Forward_Kinematics.cpp  Jacobian_Pseudoinverse.cpp  connect.cpp
